removing portfolio for now

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -100,7 +100,7 @@
             </div>
         </section>
         <!-- Portfolio-->
-        <div id="portfolio">
+        <!-- <div id="portfolio">
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
@@ -159,7 +159,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Call to action-->
         <!-- <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
@@ -207,7 +207,7 @@
                             </div>
                             <!-- <div class="d-grid"><button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Submit</button></div> -->
                             <div class="d-grid"><button class="btn btn-primary btn-xl" id="submitButton" type="submit">Submit</button></div>
-                                    <p id="submitMessage"></p>
+                            <p id="submitMessage"></p>
                         </form>
                     </div>
                 </div>
