--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">CropUp</a>
+                <a class="navbar-brand" href="#page-top">C R O P U P</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -42,8 +42,10 @@
                         <h1 class="text-white font-weight-bold">One Stop for Your Digital Solutions</h1>
                         <hr class="divider" />
                     </div>
-                    <div class="col-lg-8 align-self-baseline">
+                    <div class="col-lg-8 align-self-end">
                         <p class="text-white-75 mb-5">Including IT solutions, digital marketing, application developments and many more. We build products and services with a quality team. So let us serve you. </p>
+                    </div>
+                    <div class="col-lg-8 align-self-baseline">
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                     </div>
                 </div>
